--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,10 @@
 /build
 /captures
 .externalNativeBuild
+libs/
+src/main/java/io/
+src/main/res/drawable/
+src/main/res/layout/activity_add_task.xml
+src/main/res/layout/content_main.xml
+src/main/res/layout/task_list_item.xml
+src/main/res/values-v21/
