--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,13 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "anxolerd.github.io.firebasetutorial"
+        applicationId "io.github.anxolerd.firebasetutorial"
         minSdkVersion 19
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary true;
     }
     buildTypes {
         release {
@@ -19,13 +20,22 @@ android {
     }
 }
 
+
 dependencies {
+    provided 'org.projectlombok:lombok:1.16.12'
+
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.+'
-    testCompile 'junit:junit:4.12'
 
-    provided 'org.projectlombok:lombok:1.16.12'
+    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:design:25.1.0'
+    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:recyclerview-v7:25.1.0'
+
+    compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.firebaseui:firebase-ui-database:1.0.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
